--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ document.addEventListener('DOMContentLoaded', function() {
         
         // إعداد شحن الرصيد
         setupTopUpFunctions();
-        
+        setupAdminLogin();
         // إعداد تبويبات المشرف وأزرار الطلبات
         setupAdminTabs();
         setupOrderActions();
