--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ transform: translateX(26px);
 </div>
 </section>
 <!-- Admin Page -->
-<section id="adminPanel" class="hidden">
+<section id="adminPanel" class="page-content hidden">
     <div class="bg-white rounded-xl shadow-lg p-6 mb-6">
         <div class="flex items-center mb-6">
             <button class="w-10 h-10 flex items-center justify-center text-primary mr-2 back-btn">
@@ -550,7 +550,7 @@ transform: translateX(26px);
                 <button class="px-6 py-2 text-gray-500 font-bold admin-tab" data-tab="stats">الإحصائيات</button>
             </div>
         </div>
-        
+           
         <!-- قسم إدارة الطلبات -->
         <div id="adminOrdersTab" class="hidden">
             <div class="mb-6">
@@ -785,7 +785,6 @@ transform: translateX(26px);
 <p id="notificationText"></p>
 </div>
     // ========== إعدادات لوحة المشرف ==========
-// إعدادات لوحة المشرف
     const ADMIN_PASSWORD = "admin123";
 
     function setupAdminLogin() {
